[workspace]
resolver = "2"

members = [
	# all staging crates.
	"staging/barrels",
	"staging/ink",
	"staging/runtime",
	"staging/node",

	# all tutorial steps
	# "tutorial/node",

	# "tutorial/step-0/barrels",
	# "tutorial/step-1/barrels",
	# "tutorial/step-2/barrels",

	# "tutorial/step-3/barrels",
	# "tutorial/step-3/runtime",

	# "tutorial/step-4/barrels",
	# "tutorial/step-4/runtime",

	# "tutorial/step-5/barrels",
	# "tutorial/step-5/runtime",

	# "tutorial/step-6/barrels",
	# "tutorial/step-6/runtime",
]

[patch."https://github.com/bitzaldot/bitzal-sdk"]
bridge-runtime-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/bin/runtime-common" }
bp-header-chain = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/header-chain" }
bp-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/runtime" }
frame-support = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/support" }
frame-support-procedural = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/support/procedural" }
frame-support-procedural-tools = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/support/procedural/tools" }
frame-support-procedural-tools-derive = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/support/procedural/tools/derive" }
sp-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/api" }
sp-api-proc-macro = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/api/proc-macro" }
sp-core = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/core" }
sp-core-hashing = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/core/hashing" }
sp-debug-derive = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/debug-derive" }
sp-externalities = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/externalities" }
sp-std = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/std" }
sp-storage = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/storage" }
sp-runtime-interface = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/runtime-interface" }
sp-runtime-interface-proc-macro = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/runtime-interface/proc-macro" }
sp-tracing = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/tracing" }
sp-wasm-interface = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/wasm-interface" }
sp-io = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/io" }
sp-keystore = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/keystore" }
sp-state-machine = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/state-machine" }
sp-panic-handler = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/panic-handler" }
sp-trie = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/trie" }
sp-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/runtime" }
sp-application-crypto = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/application-crypto" }
sp-arithmetic = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/arithmetic" }
sp-weights = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/weights" }
matter-test-runtime-client = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/test-utils/runtime/client" }
sc-block-builder = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/block-builder" }
sc-client-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/api" }
matter-prometheus-endpoint = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/utils/prometheus" }
sc-executor = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/executor" }
sc-executor-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/executor/common" }
sc-allocator = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/allocator" }
sp-maybe-compressed-blob = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/maybe-compressed-blob" }
sc-executor-wasmtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/executor/wasmtime" }
sc-runtime-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/executor/runtime-test" }
matter-wasm-builder = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/utils/wasm-builder" }
sp-version = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/version" }
sp-core-hashing-proc-macro = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/core/hashing/proc-macro" }
sp-version-proc-macro = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/version/proc-macro" }
sc-tracing = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/tracing" }
sc-tracing-proc-macro = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/tracing/proc-macro" }
sp-blockchain = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/blockchain" }
sp-consensus = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/consensus/common" }
sp-inherents = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/inherents" }
sp-test-primitives = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/test-primitives" }
sp-database = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/database" }
sp-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/rpc" }
matter-test-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/test-utils/runtime" }
frame-executive = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/executive" }
frame-system = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/system" }
frame-try-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/try-runtime" }
barrel-balances = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/balances" }
frame-benchmarking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/benchmarking" }
barrel-transaction-payment = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/transaction-payment" }
frame-system-rpc-runtime-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/system/rpc/runtime-api" }
barrel-babe = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/babe" }
barrel-authorship = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/authorship" }
barrel-session = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/session" }
barrel-timestamp = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/timestamp" }
sp-timestamp = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/timestamp" }
sp-session = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/session" }
sp-staking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/staking" }
sp-consensus-babe = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/consensus/babe" }
sp-consensus-slots = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/consensus/slots" }
frame-election-provider-support = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/election-provider-support" }
frame-election-provider-solution-type = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/election-provider-support/solution-type" }
sp-npos-elections = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/npos-elections" }
matter-test-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/test-utils" }
sc-service = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/service" }
sc-chain-spec = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/chain-spec" }
sc-chain-spec-derive = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/chain-spec/derive" }
sc-network = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/network" }
sc-network-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/network/common" }
sc-consensus = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/consensus/common" }
sc-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/utils" }
sp-consensus-grandpa = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/consensus/grandpa" }
sc-network-light = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/network/light" }
sc-network-sync = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/network/sync" }
fork-tree = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/utils/fork-tree" }
sc-telemetry = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/telemetry" }
sc-client-db = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/db" }
sc-state-db = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/state-db" }
kitchensink-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/bin/node/runtime" }
frame-benchmarking-barrel-pov = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/benchmarking/pov" }
frame-system-benchmarking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/system/benchmarking" }
node-primitives = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/bin/node/primitives" }
barrel-alliance = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/alliance" }
barrel-collective = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/collective" }
barrel-identity = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/identity" }
barrel-asset-conversion = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/asset-conversion" }
barrel-assets = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/assets" }
barrel-asset-conversion-tx-payment = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/transaction-payment/asset-conversion-tx-payment" }
barrel-asset-rate = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/asset-rate" }
barrel-asset-tx-payment = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/transaction-payment/asset-tx-payment" }
barrel-authority-discovery = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/authority-discovery" }
sp-authority-discovery = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/authority-discovery" }
barrel-bags-list = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/bags-list" }
barrel-bounties = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/bounties" }
barrel-treasury = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/treasury" }
barrel-utility = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/utility" }
barrel-root-testing = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/root-testing" }
barrel-broker = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/broker" }
barrel-child-bounties = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/child-bounties" }
barrel-contracts = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/contracts" }
barrel-contracts-primitives = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/contracts/primitives" }
barrel-contracts-proc-macro = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/contracts/proc-macro" }
barrel-insecure-randomness-collective-flip = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/insecure-randomness-collective-flip" }
barrel-proxy = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/proxy" }
barrel-conviction-voting = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/conviction-voting" }
barrel-scheduler = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/scheduler" }
barrel-preimage = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/preimage" }
barrel-core-fellowship = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/core-fellowship" }
barrel-democracy = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/democracy" }
barrel-election-provider-multi-phase = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/election-provider-multi-phase" }
barrel-election-provider-support-benchmarking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/election-provider-support/benchmarking" }
barrel-elections-phragmen = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/elections-phragmen" }
barrel-fast-unstake = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/fast-unstake" }
barrel-staking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/staking" }
barrel-staking-reward-curve = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/staking/reward-curve" }
barrel-glutton = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/glutton" }
barrel-grandpa = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/grandpa" }
barrel-offences = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/offences" }
sp-keyring = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/keyring" }
barrel-im-online = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/im-online" }
barrel-indices = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/indices" }
barrel-lottery = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/lottery" }
frame-support-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/support/test" }
sp-metadata-ir = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/metadata-ir" }
frame-support-test-barrel = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/support/test/barrel" }
barrel-membership = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/membership" }
barrel-message-queue = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/message-queue" }
barrel-mmr = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/merkle-mountain-range" }
sp-mmr-primitives = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/merkle-mountain-range" }
barrel-multisig = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/multisig" }
barrel-nft-fractionalization = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/nft-fractionalization" }
barrel-nfts = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/nfts" }
barrel-nfts-runtime-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/nfts/runtime-api" }
barrel-nis = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/nis" }
barrel-nomination-pools = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/nomination-pools" }
barrel-nomination-pools-benchmarking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/nomination-pools/benchmarking" }
barrel-nomination-pools-runtime-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/nomination-pools/runtime-api" }
barrel-offences-benchmarking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/offences/benchmarking" }
barrel-ranked-collective = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/ranked-collective" }
barrel-recovery = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/recovery" }
barrel-referenda = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/referenda" }
barrel-remark = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/remark" }
barrel-safe-mode = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/safe-mode" }
barrel-salary = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/salary" }
barrel-session-benchmarking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/session/benchmarking" }
barrel-society = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/society" }
barrel-staking-runtime-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/staking/runtime-api" }
barrel-state-trie-migration = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/state-trie-migration" }
frame-remote-externalities = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/utils/frame/remote-externalities" }
matter-rpc-client = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/utils/frame/rpc/client" }
sc-rpc-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/rpc-api" }
sc-transaction-pool-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/transaction-pool/api" }
matter-state-trie-migration-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/utils/frame/rpc/state-trie-migration-rpc" }
barrel-statement = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/statement" }
sp-statement-store = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/statement-store" }
barrel-sudo = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/sudo" }
barrel-tips = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/tips" }
barrel-transaction-payment-rpc-runtime-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/transaction-payment/rpc/runtime-api" }
barrel-transaction-storage = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/transaction-storage" }
sp-transaction-storage-proof = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/transaction-storage-proof" }
barrel-tx-pause = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/tx-pause" }
barrel-uniques = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/uniques" }
barrel-vesting = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/vesting" }
barrel-whitelist = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/whitelist" }
sp-block-builder = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/block-builder" }
sp-offchain = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/offchain" }
sp-transaction-pool = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/transaction-pool" }
sc-informant = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/informant" }
sc-keystore = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/keystore" }
sc-network-bitswap = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/network/bitswap" }
sc-network-transactions = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/network/transactions" }
sc-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/rpc" }
sc-transaction-pool = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/transaction-pool" }
matter-test-runtime-transaction-pool = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/test-utils/runtime/transaction-pool" }
sc-rpc-server = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/rpc-servers" }
sc-rpc-spec-v2 = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/rpc-spec-v2" }
sc-sysinfo = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/sysinfo" }
sp-consensus-aura = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/consensus/aura" }
sp-genesis-builder = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/genesis-builder" }
matter-test-client = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/test-utils/client" }
sc-offchain = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/offchain" }
sp-runtime-interface-test-wasm = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/runtime-interface/test-wasm" }
bp-test-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/test-utils" }
bp-synochains = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/synochains" }
bp-bitzal-core = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/bitzal-core" }
bp-messages = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/messages" }
bp-relayers = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/relayers" }
bp-xcm-bridge-hub-router = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/xcm-bridge-hub-router" }
barrel-bridge-grandpa = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/modules/grandpa" }
barrel-bridge-messages = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/modules/messages" }
barrel-bridge-synochains = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/modules/synochains" }
barrel-bridge-relayers = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/modules/relayers" }
staging-xcm = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm" }
xcm-procedural = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/procedural" }
staging-xcm-builder = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/xcm-builder" }
bitzal-synochain-primitives = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/synochain" }
bitzal-core-primitives = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/core-primitives" }
staging-xcm-executor = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/xcm-executor" }
barrel-xcm = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/barrel-xcm" }
bitzal-runtime-synochains = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/synochains" }
bitzal-runtime-metrics = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/metrics" }
bitzal-primitives = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/primitives" }
bitzal-primitives-test-helpers = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/primitives/test-helpers" }
bitzal-test-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/test-runtime" }
sp-consensus-beefy = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/consensus/beefy" }
bitzal-runtime-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/common" }
barrel-staking-reward-fn = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/staking/reward-fn" }
slot-range-helper = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/common/slot_range_helper" }
test-runtime-constants = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/test-runtime/constants" }
barrel-xcm-bridge-hub-router = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/modules/xcm-bridge-hub-router" }
bp-asset-hub-ogona = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-asset-hub-ogona" }
bp-asset-hub-bitzal = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-asset-hub-bitzal" }
bp-bridge-hub-cumulus = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-bridge-hub-cumulus" }
bp-bridge-hub-ogona = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-bridge-hub-ogona" }
bp-bridge-hub-bitzal = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-bridge-hub-bitzal" }
bp-bridge-hub-fresco = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-bridge-hub-fresco" }
bp-bridge-hub-wococo = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-bridge-hub-wococo" }
bp-ogona = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-ogona" }
bp-bitzal = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-bitzal" }
bp-fresco = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-fresco" }
bp-wococo = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-wococo" }
cumulus-client-cli = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/cli" }
sc-cli = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/cli" }
cumulus-client-assator = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/assator" }
cumulus-client-consensus-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/consensus/common" }
cumulus-client-pov-recovery = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/pov-recovery" }
cumulus-primitives-core = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/primitives/core" }
cumulus-relay-chain-interface = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/relay-chain-interface" }
bitzal-overseer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/overseer" }
tracing-gum = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/gum" }
tracing-gum-proc-macro = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/gum/proc-macro" }
bitzal-node-jaeger = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/jaeger" }
bitzal-node-primitives = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/primitives" }
bitzal-erasure-coding = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/erasure-coding" }
bitzal-node-metrics = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/metrics" }
bitzal-test-service = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/test/service" }
sc-consensus-babe = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/consensus/babe" }
sc-consensus-epochs = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/consensus/epochs" }
sc-consensus-slots = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/consensus/slots" }
sc-network-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/network/test" }
sc-consensus-grandpa = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/consensus/grandpa" }
sc-network-gossip = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/network-gossip" }
bitzal-node-subsystem = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/subsystem" }
bitzal-node-subsystem-types = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/subsystem-types" }
bitzal-node-network-protocol = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/protocol" }
sc-authority-discovery = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/authority-discovery" }
bitzal-statement-table = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/statement-table" }
bitzal-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/rpc" }
matter-frame-rpc-system = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/utils/frame/rpc/system" }
mmr-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/merkle-mountain-range/rpc" }
barrel-transaction-payment-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/transaction-payment/rpc" }
sc-consensus-babe-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/consensus/babe/rpc" }
sc-consensus-beefy = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/consensus/beefy" }
sc-consensus-beefy-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/consensus/beefy/rpc" }
sc-consensus-grandpa-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/consensus/grandpa/rpc" }
sc-sync-state-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/sync-state-rpc" }
bitzal-service = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/service" }
frame-benchmarking-cli = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/utils/frame/benchmarking-cli" }
mmr-gadget = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/merkle-mountain-range" }
bitzal-approval-distribution = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/approval-distribution" }
bitzal-node-subsystem-util = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/subsystem-util" }
bitzal-node-subsystem-test-helpers = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/subsystem-test-helpers" }
bitzal-availability-bitfield-distribution = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/bitfield-distribution" }
bitzal-availability-distribution = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/availability-distribution" }
bitzal-availability-recovery = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/availability-recovery" }
bitzal-assator-protocol = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/assator-protocol" }
bitzal-dispute-distribution = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/dispute-distribution" }
bitzal-gossip-support = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/gossip-support" }
bitzal-network-bridge = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/bridge" }
bitzal-node-collation-generation = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/collation-generation" }
bitzal-node-core-approval-voting = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/approval-voting" }
bitzal-node-core-av-store = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/av-store" }
bitzal-node-core-backing = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/backing" }
bitzal-node-core-bitfield-signing = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/bitfield-signing" }
bitzal-node-core-candidate-validation = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/candidate-validation" }
bitzal-node-core-pvf = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/pvf" }
bitzal-node-core-pvf-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/pvf/common" }
bitzal-node-core-pvf-execute-worker = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/pvf/execute-worker" }
bitzal-node-core-pvf-prepare-worker = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/pvf/prepare-worker" }
test-synochain-adder = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/synochain/test-synochains/adder" }
test-synochain-halt = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/synochain/test-synochains/halt" }
matter-build-script-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/utils/build-script-utils" }
bitzal-node-core-chain-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/chain-api" }
bitzal-node-core-chain-selection = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/chain-selection" }
bitzal-node-core-dispute-coordinator = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/dispute-coordinator" }
bitzal-node-core-synochains-inherent = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/synochains-inherent" }
bitzal-node-core-prospective-synochains = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/prospective-synochains" }
bitzal-node-core-provisioner = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/provisioner" }
bitzal-node-core-pvf-checker = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/pvf-checker" }
bitzal-node-core-runtime-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/runtime-api" }
bitzal-statement-distribution = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/statement-distribution" }
fresco-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/fresco" }
binary-merkle-tree = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/utils/binary-merkle-tree" }
barrel-beefy = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/beefy" }
barrel-beefy-mmr = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/beefy-mmr" }
barrel-xcm-benchmarks = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/barrel-xcm-benchmarks" }
fresco-runtime-constants = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/fresco/constants" }
sc-basic-authorship = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/basic-authorship" }
sc-proposer-metrics = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/proposer-metrics" }
windland-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/windland" }
windland-runtime-constants = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/windland/constants" }
bitzal-test-client = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/test/client" }
cumulus-test-service = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/test/service" }
cumulus-client-consensus-relay-chain = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/consensus/relay-chain" }
cumulus-client-service = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/service" }
cumulus-client-network = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/network" }
cumulus-relay-chain-inprocess-interface = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/relay-chain-inprocess-interface" }
bitzal-cli = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/cli" }
bitzal-performance-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/test/performance-test" }
staging-ogona-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/ogona" }
ogona-runtime-constants = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/ogona/constants" }
sc-storage-monitor = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/storage-monitor" }
try-runtime-cli = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/utils/frame/try-runtime/cli" }
matter-cli-test-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/test-utils/cli" }
node-cli = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/bin/node/cli" }
node-executor = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/bin/node/executor" }
node-testing = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/bin/node/testing" }
node-inspect = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/bin/node/inspect" }
node-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/bin/node/rpc" }
sc-network-statement = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/network/statement" }
sc-statement-store = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/statement-store" }
sc-service-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/service/test" }
matter-frame-cli = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/utils/frame/frame-utilities-cli" }
cumulus-relay-chain-minimal-node = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/relay-chain-minimal-node" }
cumulus-relay-chain-rpc-interface = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/relay-chain-rpc-interface" }
cumulus-barrel-synochain-system = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/barrels/synochain-system" }
cumulus-barrel-synochain-system-proc-macro = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/barrels/synochain-system/proc-macro" }
cumulus-primitives-synochain-inherent = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/primitives/synochain-inherent" }
cumulus-test-relay-sproof-builder = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/test/relay-sproof-builder" }
cumulus-test-client = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/test/client" }
cumulus-test-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/test/runtime" }
synochains-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/common" }
cumulus-primitives-utility = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/primitives/utility" }
barrel-assator-selection = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/barrels/assator-selection" }
barrel-aura = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/aura" }
bitzal-runtime-constants = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/bitzal/constants" }
fresco-synochain-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/testing/fresco-synochain" }
cumulus-barrel-aura-ext = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/barrels/aura-ext" }
cumulus-barrel-dmp-queue = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/barrels/dmp-queue" }
cumulus-barrel-xcm = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/barrels/xcm" }
cumulus-barrel-xcmp-queue = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/barrels/xcmp-queue" }
cumulus-ping = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/barrels/ping" }
synochain-info = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/barrels/synochain-info" }
cumulus-client-consensus-aura = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/consensus/aura" }
cumulus-client-consensus-proposer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/consensus/proposer" }
cumulus-primitives-aura = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/primitives/aura" }
sc-consensus-aura = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/consensus/aura" }
cumulus-barrel-session-benchmarking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/barrels/session-benchmarking" }
cumulus-barrel-solo-to-syno = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/barrels/solo-to-syno" }
synochain-template-node = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochain-template/node" }
synochain-template-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochain-template/runtime" }
barrel-synochain-template = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochain-template/barrels/template" }
asset-hub-ogona-integration-tests = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/integration-tests/emulated/assets/asset-hub-ogona" }
asset-hub-ogona-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/assets/asset-hub-ogona" }
assets-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/assets/common" }
asset-test-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/assets/test-utils" }
synochains-runtimes-test-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/test-utils" }
integration-tests-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/integration-tests/emulated/common" }
asset-hub-bitzal-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/assets/asset-hub-bitzal" }
asset-hub-windland-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/assets/asset-hub-windland" }
bridge-hub-ogona-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/bridge-hubs/bridge-hub-ogona" }
bridge-hub-test-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/bridge-hubs/test-utils" }
bridge-hub-bitzal-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/bridge-hubs/bridge-hub-bitzal" }
bridge-hub-fresco-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/bridge-hubs/bridge-hub-fresco" }
collectives-bitzal-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/collectives/collectives-bitzal" }
penpal-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/testing/penpal" }
bitzal-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/bitzal" }
xcm-emulator = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/xcm/xcm-emulator" }
asset-hub-bitzal-integration-tests = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/integration-tests/emulated/assets/asset-hub-bitzal" }
asset-hub-windland-integration-tests = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/integration-tests/emulated/assets/asset-hub-windland" }
bridge-hub-fresco-integration-tests = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/integration-tests/emulated/bridges/bridge-hub-fresco" }
collectives-bitzal-integration-tests = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/integration-tests/emulated/collectives/collectives-bitzal" }
contracts-fresco-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/contracts/contracts-fresco" }
glutton-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/glutton/glutton-ogona" }
cumulus-primitives-timestamp = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/primitives/timestamp" }
seedling-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/starters/seedling" }
shell-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/synochains/runtimes/starters/shell" }
bitzal-synochain-bin = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/bitzal-synochain" }
bitzal = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal" }
erasure_coding_fuzzer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/erasure-coding/fuzzer" }
bitzal-test-malus = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/malus" }
zombienet-backchannel = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/zombienet-backchannel" }
test-synochains = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/synochain/test-synochains" }
test-synochain-adder-assator = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/synochain/test-synochains/adder/assator" }
test-synochain-undying = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/synochain/test-synochains/undying" }
test-synochain-undying-assator = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/synochain/test-synochains/undying/assator" }
bitzal-voter-bags = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/utils/generate-bags" }
generate-bags = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/utils/frame/generate-bags" }
remote-ext-tests-bags-list = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/utils/remote-ext-tests/bags-list" }
barrel-bags-list-remote-tests = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/bags-list/remote-tests" }
xcm-executor-integration-tests = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/xcm-executor/integration-tests" }
xcm-simulator = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/xcm-simulator" }
xcm-simulator-example = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/xcm-simulator/example" }
xcm-simulator-fuzzer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/xcm-simulator/fuzzer" }
minimal-node = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/bin/minimal/node" }
frame = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame" }
barrel-examples = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/examples" }
barrel-default-config-example = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/examples/default-config" }
barrel-dev-mode = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/examples/dev-mode" }
barrel-example-basic = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/examples/basic" }
barrel-example-frame-crate = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/examples/frame-crate" }
barrel-example-kitchensink = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/examples/kitchensink" }
barrel-example-offchain-worker = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/examples/offchain-worker" }
barrel-example-split = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/examples/split" }
minimal-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/bin/minimal/runtime" }
sc-consensus-manual-seal = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/consensus/manual-seal" }
node-bench = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/bin/node/bench" }
node-template = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/bin/node-template/node" }
node-template-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/bin/node-template/runtime" }
barrel-template = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/bin/node-template/barrels/template" }
chain-spec-builder = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/bin/utils/chain-spec-builder" }
subkey = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/bin/utils/subkey" }
sc-consensus-pow = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/client/consensus/pow" }
sp-consensus-pow = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/consensus/pow" }
barrel-atomic-swap = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/atomic-swap" }
barrel-bags-list-fuzzer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/bags-list/fuzzer" }
barrel-election-provider-e2e-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/election-provider-multi-phase/test-staking-e2e" }
frame-election-solution-type-fuzzer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/election-provider-support/solution-type/fuzzer" }
barrel-nicks = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/nicks" }
barrel-node-authorization = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/node-authorization" }
barrel-nomination-pools-fuzzer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/nomination-pools/fuzzer" }
barrel-nomination-pools-test-staking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/nomination-pools/test-staking" }
barrel-paged-list = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/paged-list" }
barrel-paged-list-fuzzer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/paged-list/fuzzer" }
barrel-root-offences = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/root-offences" }
barrel-scored-pool = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/scored-pool" }
frame-support-test-compile-pass = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/frame/support/test/compile_pass" }
sp-api-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/api/test" }
sp-application-crypto-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/application-crypto/test" }
sp-arithmetic-fuzzer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/arithmetic/fuzzer" }
sp-consensus-sassafras = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/consensus/sassafras" }
sp-crypto-ec-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/crypto/ec-utils" }
sp-npos-elections-fuzzer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/npos-elections/fuzzer" }
sp-runtime-interface-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/runtime-interface/test" }
sp-runtime-interface-test-wasm-deprecated = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/primitives/runtime-interface/test-wasm-deprecated" }
node-template-release = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/scripts/ci/node-template-release" }
node-runtime-generate-bags = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/utils/frame/generate-bags/node-runtime" }
matter-frame-rpc-support = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/matter/utils/frame/rpc/support" }
